Config Css + loading data from DB

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,19 @@
 body {
-    background-color: lightgray;
+
+}
+
+th {
+    font-weight: bold;
+    color: #039;
+    padding: 10px 15px;
+}
+
+td {
+    color: #669;
+    border-top: 1px solid #669;
+    padding: 10px 15px;
+}
+
+tr:nth-child(2n) {
+    background: #e8edff;
 }
