--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,9 +1,11 @@
+{# ./templates/default/index.html.twig #}
+
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DefaultController!{% endblock %}
+ {% block title %} Плейлист {% endblock %}
 
-{% block body %}
+ {% block body %}
 
-    <div id="root"></div>
+     <div id="root"></div>
 
-{% endblock %}
+ {% endblock %}
