--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,22 +1,6 @@
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
 body {
 
 }
 
-th {
-    font-weight: bold;
-    color: #039;
-    padding: 10px 15px;
-}
-
-td {
-    color: #669;
-    border-top: 1px solid #669;
-    padding: 10px 15px;
-}
-
-tr:nth-child(2n) {
-    background: #e8edff;
-}
-
-.table-sort-icon {
-}
